--- a/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
@@ -45,12 +45,12 @@ import entryFile from './pivot-table/demo.txt'
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
     ```shell
-    pnpm add @univerjs-pro/engine-pivot @univerjs/sheets-pivot @univerjs/sheets-pivot-ui
+    pnpm add @univerjs-pro/engine-pivot  @univerjs-pro/sheets-pivot  @univerjs-pro/sheets-pivot-ui
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     ```shell
-    npm install @univerjs-pro/engine-pivot @univerjs/sheets-pivot @univerjs/sheets-pivot-ui
+    npm install @univerjs-pro/engine-pivot  @univerjs-pro/sheets-pivot  @univerjs-pro/sheets-pivot-ui
     ```
   </Tabs.Tab>
 </Tabs>
