--- a/src/docs/guides/sheet/features/pivot-table/pivot-facade.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/pivot-table/pivot-facade.zh-CN.mdx
@@ -8,12 +8,12 @@ import { Tabs } from 'nextra/components'
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
     ```shell
-    pnpm add @univerjs-pro/engine-pivot @univerjs/sheets-pivot @univerjs/sheets-pivot-ui @univerjs-pro/facade
+    pnpm add @univerjs-pro/engine-pivot  @univerjs-pro/sheets-pivot  @univerjs-pro/sheets-pivot-ui @univerjs-pro/facade
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     ```shell
-    npm install @univerjs-pro/engine-pivot @univerjs/sheets-pivot @univerjs/sheets-pivot-ui @univerjs-pro/facade
+    npm install @univerjs-pro/engine-pivot  @univerjs-pro/sheets-pivot  @univerjs-pro/sheets-pivot-ui @univerjs-pro/facade
     ```
   </Tabs.Tab>
 </Tabs>
