--- a/src/docs/guides/general/server/docker.zh-CN.mdx
+++ b/src/docs/guides/general/server/docker.zh-CN.mdx
@@ -1,4 +1,4 @@
-import { Callout, Steps } from 'nextra/components'
+import { Callout, Steps, Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 import Image from '@/components/Image'
 import mysqlImg from './docker/mysql.png'
@@ -206,19 +206,45 @@ HOST_GRAFANA_PORT=13000
 
 4. 启动/重启服务：`bash run.sh`。
 
-### 怎样修改 S3 配置以使用自己的组件？ <a id="s3-config"></a>
+### 怎样修改 S3 配置以使用自己的组件？ <a id="s3-config" />
 
 1. 更新 `.env` 文件，修改 S3 对应的配置。
-```shell
-# s3 config
-S3_USER=minio
-S3_PASSWORD=minio123456
-S3_REGION=us-east-1
-S3_PATH_STYLE=true
-S3_ENDPOINT=http://univer-minio:9000
-S3_ENDPOINT_PUBLIC=http://univer-minio:9000
-S3_DEFAULT_BUCKET=univer
-```
+
+<Tabs items={['minio', 'aliyun oss', 'aws s3']}>
+  <Tabs.Tab label="minio">
+    ```shell
+    S3_USER=minio
+    S3_PASSWORD=minio123456
+    S3_REGION=us-east-1
+    S3_PATH_STYLE=true
+    S3_ENDPOINT=http://192.168.1.100:9000
+    S3_ENDPOINT_PUBLIC=http://192.168.1.100:9000
+    S3_DEFAULT_BUCKET=univer
+    ```
+  </Tabs.Tab>
+  <Tabs.Tab label="aliyun oss">
+    ```shell
+    S3_USER=${ACCESS_KEY_ID}
+    S3_PASSWORD=${ACCESS_KEY_SECRET}
+    S3_REGION=oss-cn-shenzhen
+    S3_PATH_STYLE=false
+    S3_ENDPOINT=https://oss-cn-shenzhen-internal.aliyuncs.com
+    S3_ENDPOINT_PUBLIC=https://oss-cn-shenzhen.aliyuncs.com
+    S3_DEFAULT_BUCKET=univer
+    ```
+  </Tabs.Tab>
+  <Tabs.Tab label="aws s3">
+    ```shell
+    S3_USER=${ACCESS_KEY_ID}
+    S3_PASSWORD=${ACCESS_KEY_SECRET}
+    S3_REGION=us-east-1
+    S3_PATH_STYLE=false
+    S3_ENDPOINT=https://s3.amazonaws.com
+    S3_ENDPOINT_PUBLIC=https://s3.amazonaws.com
+    S3_DEFAULT_BUCKET=univer
+    ```
+  </Tabs.Tab>
+</Tabs>
 
 - `S3_PATH_STYLE`：`true` 表示 bucket 在路由路径；`false` 表示 bucket 在域名上。
 - `S3_REGION`：地区，根据 s3 bucket 的位置配置。
@@ -252,7 +278,7 @@ server:
 - “*”：允许所有域名跨域，但不支持授权头信息比如 authorization、cookie。
 - “你自定义的源”：例如 `http://localhost:3010`，支持授权头信息。
 
-### 如何修改 redis 配置以使用自己的组件？  <a id="redis-config"></a>
+### 如何修改 redis 配置以使用自己的组件？  <a id="redis-config" />
 
 1. 更新 `.env` 文件，设置对应的配置：
 ```shell
@@ -268,7 +294,7 @@ REDIS_DB=0
 
 3. 启动/重启服务：`bash run.sh`
 
-### 如何修改 rabbitmq 配置以使用自己的组件？  <a id="rabbitmq-config"></a>
+### 如何修改 rabbitmq 配置以使用自己的组件？  <a id="rabbitmq-config" />
 
 1. 更新 `.env` 文件，设置对应的配置：
 ```shell
