--- a/src/docs/guides/sheet/facade/row-col.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/row-col.zh-CN.mdx
@@ -178,6 +178,21 @@ const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
 sheet.setRowHeightsForced(0, 3, 5);
 ```
 
+### 设置行自定义属性
+
+`setRowCustom(custom)`：设置给定行的自定义属性，在行上存储一个对象 `custom`, 其中可以放入任何符合 JSON 格式的数据，用于自定义存储一些额外的信息。
+更新 `custom` 数据会覆盖原有的 `custom` 数据，如果你在更新数据时需要保留原有的 `custom` 数据，请提前获取到 `custom` 数据合并成新的数据后再更新。
+
+```typescript
+const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
+
+// 设置第一行和第三行的自定义属性
+sheet.setRowCustom({
+    0: { color: 'red' },
+    2: { size: 16 },
+});
+```
+
 ## 列 Column
 
 ### 在指定列后插入列
@@ -337,4 +352,19 @@ const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
 
 // 将前三列的宽度设置为 200 像素
 sheet.setColumnWidths(0, 3, 200);
+```
+
+### 设置列自定义属性
+
+`setColumnCustom(custom)`: 设置给定列的自定义属性，在列上存储一个对象 `custom`, 其中可以放入任何符合 JSON 格式的数据，用于自定义存储一些额外的信息。
+更新 `custom` 数据会覆盖原有的 `custom` 数据，如果你在更新数据时需要保留原有的 `custom` 数据，请提前获取到 `custom` 数据合并成新的数据后再更新。
+
+```typescript
+const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
+
+// 设置第一列和第三列的自定义属性
+sheet.setColumnCustom({ 
+    0: { color: 'red' },
+    2: { size: 16 },
+});
 ```
