--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -46,7 +46,7 @@ univer.registerPlugin(UniverSheetsFormulaPlugin);
 // Passing in an empty object will automatically initialize the workbook
 univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});`
 
-<ReactLive code={code}  />
+<ReactLive code={code} hideEditor={false} />
 
 ### Getting Workbook Data
 
@@ -131,12 +131,12 @@ univer.registerPlugin(UniverSheetsFormulaPlugin);
 univer.createUnit(UniverInstanceType.UNIVER_SHEET, {})
 
 const univerAPI = FUniver.newAPI(univer);
-//const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeWorkbook = univerAPI.getActiveWorkbook();
 
 // Create a new sheet that named 'Sheet2' with 10 rows and 10 columns
-//const sheet = activeWorkbook.create('Sheet2', 10, 10)`
+const sheet = activeWorkbook.create('Sheet2', 10, 10)`
 
-<ReactLive code={code2}  />
+<ReactLive code={code2} hideEditor={false} />
 
 ### Remove Worksheet
 
